@@ -5,7 +5,7 @@ module ActiveMerchant #:nodoc:
       CARD_COMPANIES = { 
         'visa'               => /^4\d{12}(\d{3})?$/,
         'master'             => /^(5[1-5]\d{4}|677189)\d{10}$/,
-        'discover'           => /^6011\d{12}$/,
+        'discover'           => /^(6011|65\d{2})\d{12}$/,
         'american_express'   => /^3[47]\d{13}$/,
         'diners_club'        => /^3(0[0-5]|[68]\d)\d{11}$/,
         'jcb'                => /^3528\d{12}$/,
@@ -91,42 +91,42 @@ module ActiveMerchant #:nodoc:
         
         private
         
-          def valid_card_number_length?(number) #:nodoc:
-            number.to_s.length >= 13
-          end
+        def valid_card_number_length?(number) #:nodoc:
+          number.to_s.length >= 13
+        end
         
-          def valid_test_mode_card_number?(number) #:nodoc:
-            ActiveMerchant::Billing::Base.test? && 
-              %w[1 2 3 success failure error].include?(number.to_s)
+        def valid_test_mode_card_number?(number) #:nodoc:
+          ActiveMerchant::Billing::Base.test? && 
+            %w[1 2 3 success failure error].include?(number.to_s)
+        end
+        
+        # Checks the validity of a card number by use of the the Luhn Algorithm. 
+        # Please see http://en.wikipedia.org/wiki/Luhn_algorithm for details.
+        def valid_card_number_digits?(number) #:nodoc:
+          number[-1, 1].to_i == (10 - sum_and_weigh_digits(number) % 10) % 10
+        end
+        
+        # This is an implementation of the Luhn algorithm, refactored for readability.
+        def sum_and_weigh_digits(number) #:nodoc:
+          sum = 0
+          number = number.to_s
+          for position in 0..number.length
+            weight = calculate_weight(number, position)
+            sum += (weight < 10) ? weight : weight - 9
           end
-          
-          # Checks the validity of a card number by use of the the Luhn Algorithm. 
-          # Please see http://en.wikipedia.org/wiki/Luhn_algorithm for details.
-          def valid_card_number_digits?(number) #:nodoc:
-            number[-1, 1].to_i == (10 - sum_and_weigh_digits(number) % 10) % 10
-          end
-          
-          # This is an implementation of the Luhn algorithm, refactored for readability.
-          def sum_and_weigh_digits(number) #:nodoc:
-            sum = 0
-            number = number.to_s
-            for position in 0..number.length
-              weight = calculate_weight(number, position)
-              sum += (weight < 10) ? weight : weight - 9
-            end
-            return sum
-          end
-          
-          # To save time on the Luhn algorithm, we caculate the weight of a digit in the series by 
-          # multiplying by 2 if it's position is even, and 1 if it's index is odd.
-          def calculate_weight(number, position) #:nodoc:
-            select_digit(number, position) * (2 - (position % 2))
-          end
-          
-          # Plucks a digit from the card number to perform operations on
-          def select_digit(number, position) #:nodoc:
-            number[-1 * (position + 2), 1].to_i
-          end
+          return sum
+        end
+        
+        # To save time on the Luhn algorithm, we caculate the weight of a digit in the series by 
+        # multiplying by 2 if it's position is even, and 1 if it's index is odd.
+        def calculate_weight(number, position) #:nodoc:
+          select_digit(number, position) * (2 - (position % 2))
+        end
+        
+        # Plucks a digit from the card number to perform operations on
+        def select_digit(number, position) #:nodoc:
+          number[-1 * (position + 2), 1].to_i
+        end
       end
     end
   end
